[package]
name = "isotomachine"
version = "0.1.0"
edition = "2021"
description = "A library for provisioning openQA worker VMs and machines"
readme = "REAMDE.md"
repository = "https://github.com/ByteOtter/isotest-ng/tree/main/isotomachine"
license = "GPL-2.0"

[dependencies]
env_logger = { version = "0.11.5", optional = true }
log = "0.4.22"

[features]
default-logging = ["env_logger"]
