[package]
name = "isototest"
version = "0.1.0"
edition = "2021"
description = "A library for executing openQA test on workers"
readme = "README.md"
repository = "https://github.com/ByteOtter/isotest-ng/tree/main/isototest"
license = "GPL-2.0"

[dependencies]
mockito = "1.4.0"
tokio = "1.38.1"
vnc-rs = "0.5.1"
